--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,25 +1,25 @@
-# Python project configuration / Python 项目配置
+# Python project configuration
 [project]
 name = "mcp-server-snowflake"
 version = "0.1.0"
-description = "MCP server for interacting with Snowflake databases / 用于与 Snowflake 数据库交互的 MCP 服务器"
+description = "MCP server for interacting with Snowflake databases"
 readme = "README.md"
-requires-python = ">=3.10"  # Required Python version / 所需的 Python 版本
+requires-python = ">=3.10"  # Required Python version
 dependencies = [  # Project dependencies / 项目依赖项
-    "mcp>=1.0.0",                    # MCP SDK / MCP 软件开发工具包
-    "snowflake-connector-python",     # Snowflake connector / Snowflake 连接器
-    "python-dotenv"                   # Environment variable management / 环境变量管理
+    "mcp>=1.0.0",                    # MCP SDK
+    "snowflake-connector-python",     # Snowflake connector
+    "python-dotenv"                   # Environment variable management
 ]
 
-# Build system configuration / 构建系统配置
+# Build system configuration
 [build-system]
-requires = ["hatchling"]  # Build tool requirement / 构建工具要求
-build-backend = "hatchling.build"  # Build backend / 构建后端
+requires = ["hatchling"]  # Build tool requirement
+build-backend = "hatchling.build"  # Build backend
 
-# Build configuration / 构建配置
+# Build configuration
 [tool.hatch.build.targets.wheel]
-packages = ["src/mcp_server_snowflake"]  # Package location / 包位置
+packages = ["src/mcp_server_snowflake"]  # Package location
 
-# Entry points / 入口点配置
+# Entry points
 [project.scripts]
-mcp-server-snowflake = "mcp_server_snowflake.server:main"  # Command line entry / 命令行入口
+mcp-server-snowflake = "mcp_server_snowflake.server:main"  # Command line entry
